--- a/assets/css/default.css
+++ b/assets/css/default.css
@@ -8,7 +8,7 @@ article,aside,dialog,footer,header,section,footer,nav,figure,menu,img,video,audi
 body,h1,h2,h3,h4,h5,h6,hr,p,blockquote,dialog,dl,dt,dd,ul,ol,li,iframe,pre,form,figure,fieldset,legend,button,input,textarea,th,td{ margin: 0; padding: 0; border: 0; }
 a{ color: inherit; text-decoration: none; cursor: pointer; transition: all .24s; }
 b,strong{ font-weight: 700; }
-html,body{ position: relative; color: var(--color); font: normal 400 14px Consolas, 'Microsoft Yahei'; line-height: 1.425; overflow-x: hidden; height: 100%; scroll-behavior: smooth; display: flex; flex-direction: column; background: var(--background); }
+html,body{ position: relative; color: var(--color); font: normal 400 14px Consolas, 'Microsoft Yahei'; line-height: 1.425; overflow: hidden; height: 100%; scroll-behavior: smooth; display: flex; flex-direction: column; background: var(--background); }
 input, button, textarea, select{ font: inherit; }
 input:-webkit-autofill{ background-color: initial; }
 ul,li,ol{ list-style: none; }
@@ -74,10 +74,8 @@ img,video,audio,iframe{ margin: auto; max-height: 100%; max-width: 100%; transit
 }
 .context:empty{ display: none !important; }
 .leftward{ left: auto; right: 2px; }
-.li{
+.context > a {
     display: flex;
-    align-items: center;
-    justify-content: space-between;
     padding: 4px 8px;
 }
 .dropdown:hover > .context {
@@ -105,14 +103,27 @@ img,video,audio,iframe{ margin: auto; max-height: 100%; max-width: 100%; transit
     min-width: 120px;
     overflow: auto;
 }
-.menu .li:hover{
+
+.menu ul{
+    height: 0;
+    padding-left: 0;
+    overflow: hidden;
+    transition: all .24s;
+}
+.li{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 4px 8px;
+}
+.li:hover{
     background-color: rgba(0, 0, 0, .15);
 }
-.menu .li.active{
+.li.active{
     opacity: 1;
     background-color: rgba(255, 255, 255, .5);
 }
-.menu .li > b {
+.li > b {
     flex: 1 1 auto;
     overflow: hidden;
     text-overflow: ellipsis;
@@ -129,6 +140,14 @@ img,video,audio,iframe{ margin: auto; max-height: 100%; max-width: 100%; transit
 }
 .li:hover > .tgl-close {
     transform: scale(1);
+}
+.menu ul.active {
+    height: unset;
+    padding-left: 1em;
+    height: auto;
+}
+.menu > li > ul {
+    font-size: 0.9em;
 }
 .section{
     position: relative;
@@ -158,6 +177,41 @@ img,video,audio,iframe{ margin: auto; max-height: 100%; max-width: 100%; transit
     font-weight: 600;
 }
 
+.confirm{
+    display: none;
+    box-sizing: border-box;
+    position: absolute;
+    top: 50%; left: 50%;
+    max-width: 100%;
+    max-height: 100%;
+    padding: 12px;
+    transform: translate(-50%, -50%);
+    background: rgba(255,255,255,.5);
+    backdrop-filter: blur(12px);
+    border-radius: 2px;
+}
+
+.contextmenu{
+    position: absolute;
+    z-index: 100;
+    left: 100%; top: 100%;
+    padding: 4px;
+    border-radius: 2px;
+    background: rgba(255,255,255,.5);
+    backdrop-filter: blur(12px);
+    box-shadow: 0 0 12px rgba(0, 0, 0, .05);
+    visibility: hidden;
+}
+.contextmenu > a {
+    display: block;
+    min-width: 60px;
+    padding: 4px 8px;
+    border-radius: inherit;
+}
+.contextmenu > a:hover {
+    background-color: rgba(255,255,255,.6);
+}
+
 .footer{
     display: flex;
     flex-direction: row-reverse;
@@ -171,7 +225,6 @@ img,video,audio,iframe{ margin: auto; max-height: 100%; max-width: 100%; transit
     display: inline-flex;
     padding: 6px 12px;
     font-weight: 600;
-    transition: all .24s;
     user-select: none;
     -webkit-app-region: no-drag;
 }
@@ -181,12 +234,4 @@ img,video,audio,iframe{ margin: auto; max-height: 100%; max-width: 100%; transit
 .btn:before{
     content: '\20';
     position: absolute;
-    left: 8px; bottom: 16px;
-    width: 12px; height: 12px;
-    border-radius: 12px;
-    background: rgba(93, 255, 183, 0.5);
-    transition: all .24s;
-}
-.btn:hover:before{
-    transform: translate(8px, 6px) scale(1.5);
 }
