--- a/assets/css/default.css
+++ b/assets/css/default.css
@@ -197,19 +197,22 @@ img,video,audio,iframe{ margin: auto; max-height: 100%; max-width: 100%; transit
     left: 100%; top: 100%;
     padding: 4px;
     border-radius: 2px;
-    background: rgba(255,255,255,.5);
+    background: rgba(255,255,255,.4);
     backdrop-filter: blur(12px);
     box-shadow: 0 0 12px rgba(0, 0, 0, .05);
     visibility: hidden;
+    white-space: nowrap;
 }
 .contextmenu > a {
     display: block;
-    min-width: 60px;
     padding: 4px 8px;
     border-radius: inherit;
 }
 .contextmenu > a:hover {
-    background-color: rgba(255,255,255,.6);
+    background-color: rgba(255,255,255,.4);
+}
+.contextmenu a[data-act="9"]:hover {
+    background-color: rgba(255, 162, 162, 0.4);
 }
 
 .footer{
