--- a/assets/css/default.css
+++ b/assets/css/default.css
@@ -8,7 +8,7 @@ article,aside,dialog,footer,header,section,footer,nav,figure,menu,img,video,audi
 body,h1,h2,h3,h4,h5,h6,hr,p,blockquote,dialog,dl,dt,dd,ul,ol,li,iframe,pre,form,figure,fieldset,legend,button,input,textarea,th,td{ margin: 0; padding: 0; border: 0; }
 a{ color: inherit; text-decoration: none; cursor: pointer; transition: all .24s; }
 b,strong{ font-weight: 700; }
-html,body{ position: relative; color: var(--color); font: normal 400 14px Consolas, 'Microsoft Yahei'; line-height: 1.425; overflow: hidden; height: 100%; scroll-behavior: smooth; display: flex; flex-direction: column; background: var(--background); }
+html,body{ position: relative; color: var(--color); font: normal 400 14px -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; line-height: 1.425; overflow: hidden; height: 100%; scroll-behavior: smooth; display: flex; flex-direction: column; background: var(--background); }
 input, button, textarea, select{ font: inherit; }
 input:-webkit-autofill{ background-color: initial; }
 ul,li,ol{ list-style: none; }
